set client to use alchemy tags

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -233,7 +233,8 @@
         var config = <%= grunt.toJSON(config) %>;
 
         config.features = {
-            preview: 1
+            preview: 1,
+            alchemy: 1
         };
 
         var modules = [
