--- a/client/app/index.html
+++ b/client/app/index.html
@@ -57,6 +57,7 @@
 
     <script src="bower_components/angular-embed/dist/angular-embed.js"></script>
     <script src="bower_components/angular-contenteditable/angular-contenteditable.js"></script>
+    <script src="bower_components/angular-vs-repeat/src/angular-vs-repeat.js"></script>
     <!-- endbuild -->
 
     <!-- build:js superdesk-core.js -->
