Table in Medium Editor

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -16,6 +16,7 @@
     <!-- build:css vendor.css -->
     <link rel="stylesheet" href="bower_components/jcrop/css/jquery.Jcrop.css">
     <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/slider.css">
+    <link rel="stylesheet" href="bower_components/medium-editor-tables/dist/css/medium-editor-tables.css">
     <!-- endbuild -->
 
   </head>
@@ -36,6 +37,7 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/gridster/dist/jquery.gridster.with-extras.js"></script>
     <script src="bower_components/medium-editor/dist/js/medium-editor.js"></script>
+    <script src="bower_components/medium-editor-tables/dist/js/medium-editor-tables.js"></script>
     <script src="bower_components/ment.io/dist/mentio.js"></script>
     <script src="bower_components/rangy/rangy-core.js"></script>
     <script src="bower_components/rangy/rangy-selectionsaverestore.js"></script>
@@ -44,16 +46,16 @@
     <script src="bower_components/langmap/language-mapping-list.js"></script>
     <script src="bower_components/angular-moment/angular-moment.js"></script>
     <script src="bower_components/d3/d3.js"></script>
-    <script src="bower_components/jcrop/js/jquery.Jcrop.js"></script> 
+    <script src="bower_components/jcrop/js/jquery.Jcrop.js"></script>
 
-    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script> 
-    <script src="bower_components/angular-resource/angular-resource.js"></script> 
-    <script src="bower_components/angular-route/angular-route.js"></script> 
-    <script src="bower_components/angular-gettext/dist/angular-gettext.js"></script> 
-    <script src="bower_components/angular-animate/angular-animate.js"></script> 
-    <script src="bower_components/ng-file-upload/ng-file-upload.js"></script> 
-    <script src="bower_components/ng-file-upload/ng-file-upload-shim.js"></script> 
-    <script src="bower_components/raven-js/dist/raven.js"></script> 
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-gettext/dist/angular-gettext.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
+    <script src="bower_components/ng-file-upload/ng-file-upload-shim.js"></script>
+    <script src="bower_components/raven-js/dist/raven.js"></script>
 
     <script src="bower_components/angular-embed/dist/angular-embed.js"></script>
     <script src="bower_components/angular-contenteditable/angular-contenteditable.js"></script>
@@ -77,10 +79,10 @@
     <script src="node_modules/superdesk-core/scripts/superdesk/api/url-resolver-service.js"></script>
 
     <script src="node_modules/superdesk-core/scripts/superdesk/auth/auth.js"></script>
-    <script src="node_modules/superdesk-core/scripts/superdesk/auth/auth-service.js"></script> 
-    <script src="node_modules/superdesk-core/scripts/superdesk/auth/session-service.js"></script> 
-    <script src="node_modules/superdesk-core/scripts/superdesk/auth/basic-auth-adapter.js"></script> 
-    <script src="node_modules/superdesk-core/scripts/superdesk/auth/login-modal-directive.js"></script> 
+    <script src="node_modules/superdesk-core/scripts/superdesk/auth/auth-service.js"></script>
+    <script src="node_modules/superdesk-core/scripts/superdesk/auth/session-service.js"></script>
+    <script src="node_modules/superdesk-core/scripts/superdesk/auth/basic-auth-adapter.js"></script>
+    <script src="node_modules/superdesk-core/scripts/superdesk/auth/login-modal-directive.js"></script>
 
     <script src="node_modules/superdesk-core/scripts/superdesk/beta/beta.js"></script>
 
