SDPA-264 : Change 'slugline' back to 'keyword' and place under 'topic'

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -225,6 +225,7 @@
     <!-- endbuild -->
 
     <script src="templates-cache.js"></script>
+    <script src="app-templates-cache.js"></script>
 
     <!-- build:js main.js -->
     <script src="app/main.js"></script>
