SDNTB-49 Add the genuine translation file
The one used localy is used for chaging labels

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -224,6 +224,7 @@
 
     <!-- build:js translations.js -->
     <script src="app/translations.js"></script>
+    <script src="node_modules/superdesk-core/app/scripts/translations.js"></script>
     <!-- endbuild -->
 
     <script src="templates-cache.js"></script>
