Added autopopulateByline setting to config.
SDPA-285

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -237,7 +237,8 @@
 
         config.features = {
             preview: 1,
-            alchemy: 1
+            alchemy: 1,
+            autopopulateByline: 1
         };
 
         var modules = [
