fix(translations): add aap specific translations
taken from client-core

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -217,6 +217,7 @@
 
     <!-- build:js translations.js -->
     <script src="node_modules/superdesk-core/app/scripts/translations.js"></script>
+    <script src="app/translations.js"></script>
     <!-- endbuild -->
 
     <script src="templates-cache.js"></script>
