SDNTB-97 Support for localization

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -181,6 +181,7 @@
     <script src="node_modules/superdesk-core/scripts/superdesk-authoring/macros/macros.js"></script>
 
     <script src="node_modules/superdesk-core/scripts/superdesk-search/search.js"></script>
+    <script src="node_modules/superdesk-core/scripts/superdesk-search/react.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk-legal-archive/legal_archive.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk-stream/stream.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk-packaging/packaging.js"></script>
