Fixed topics in preview.

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -240,6 +240,8 @@
             alchemy: 1
         };
 
+        config.previewSubjectFilterKey = 'patopic';
+
         var modules = [
             'superdesk',
             'superdesk.settings',
