fix(upload): add exif lib to index
it's used to get metadata of an image when uploading

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -55,6 +55,7 @@
     <script src="bower_components/angular-embed/dist/angular-embed.js"></script>
     <script src="bower_components/angular-contenteditable/angular-contenteditable.js"></script>
     <script src="bower_components/angular-vs-repeat/src/angular-vs-repeat.js"></script>
+    <script src="bower_components/exif-js/exif.js"></script>
     <!-- endbuild -->
 
     <!-- build:js superdesk-core.js -->
