chore(cores): Update superdesk cores

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -220,6 +220,7 @@
     <script src="node_modules/superdesk-core/scripts/superdesk-search-providers/module.js"></script>
 
     <script src="node_modules/superdesk-core/scripts/superdesk/editor2/editor.js"></script>
+    <script src="node_modules/superdesk-core/scripts/superdesk/editor2/add-content.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk/editor2/editor.ctrl.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk/editor2/add-embed.ctrl.js"></script>
     <!-- endbuild -->
