Targeted publishing dependencies

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -157,6 +157,7 @@
     <script src="node_modules/superdesk-core/scripts/superdesk-users/activity/activity.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk-users/import/import.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk-groups/groups.js"></script>
+    <script src="node_modules/superdesk-core/scripts/superdesk-products/products.js"></script>
 
     <script src="node_modules/superdesk-core/scripts/superdesk-publish/publish.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk-templates/templates.js"></script>
@@ -240,6 +241,7 @@
             'superdesk.ingest',
             'superdesk.desks',
             'superdesk.groups',
+            'superdesk.products',
             'superdesk.authoring',
             'superdesk.authoring.multiedit',
             'superdesk.packaging',
