Added configuration for authoring topbar buttons

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -245,7 +245,8 @@
 
         config.features = {
             preview: 1,
-            alchemy: 1
+            alchemy: 1,
+            customAuthoringTopbar: 1
         };
 
         config.user = {
