Set PA date time types for publish/embargo input.

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -246,6 +246,12 @@
 
         config.previewSubjectFilterKey = 'patopic';
 
+        //date formats for publish/embargo entry
+        config.view = {
+            dateformat: 'D/M/YYYY',
+            timeformat: 'H:mm'
+        }
+
         var modules = [
             'superdesk',
             'superdesk.settings',
