--- a/client/app/docs.html
+++ b/client/app/docs.html
@@ -1,73 +1,111 @@
 <!doctype html>
 <html class="no-js">
-  <head>
-    <meta charset="utf-8">
-    <title>Superdesk Docs</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <head>
+        <meta charset="utf-8">
+        <title>Superdesk Docs</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <link rel="stylesheet" href="styles/css/bootstrap.css">
-    <link rel="stylesheet" href="styles/css/docs.css">
+        <link rel="stylesheet" href="app.css">
+        <link rel="stylesheet" href="bootstrap.css">
+        <link rel="stylesheet" href="docs.css">
 
-  </head>
-  <body>
+    </head>
+    <body>
+        <div sd-docs></div>
 
-    <div sd-docs></div>
+        <!-- build:js vendor-docs.js -->
+        <script src="bower_components/jquery/dist/jquery.js"></script>
+        <script src="bower_components/lodash/lodash.js"></script>
+        <script src="bower_components/jquery-ui/jquery-ui.js"></script>
+        <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
-    <!-- build:js scripts/vendor-docs.js -->
-    <script src="scripts/bower_components/jquery/dist/jquery.js"></script>
-    <script src="scripts/bower_components/jquery-ui/jquery-ui.js"></script>
-    <script src="scripts/bower_components/angular/angular.js"></script>
-    <script src="scripts/bower_components/lodash/lodash.js"></script>
-    <script src="scripts/bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="scripts/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="scripts/bower_components/momentjs/moment.js"></script>
-    <script src="scripts/bower_components/requirejs/require.js"></script>
-    <!-- endbuild -->
+        <script src="bower_components/react/react.js"></script>
+        <script src="bower_components/react/react-dom.js"></script>
+        <script src="bower_components/classnames/index.js"></script>
 
-    <script src="//google-code-prettify.googlecode.com/svn/trunk/src/prettify.js"></script>
+        <script src="bower_components/angular/angular.js"></script>
+        <script src="bower_components/gridster/dist/jquery.gridster.with-extras.js"></script>
+        <script src="bower_components/medium-editor/dist/js/medium-editor.js"></script>
+        <script src="bower_components/ment.io/dist/mentio.js"></script>
+        <script src="bower_components/rangy/rangy-core.js"></script>
+        <script src="bower_components/rangy/rangy-selectionsaverestore.js"></script>
+        <script src="bower_components/momentjs/moment.js"></script>
+        <script src="bower_components/moment-timezone/builds/moment-timezone-with-data-2010-2020.js"></script>
+        <script src="bower_components/langmap/language-mapping-list.js"></script>
+        <script src="bower_components/angular-moment/angular-moment.js"></script>
+        <script src="bower_components/d3/d3.js"></script>
+        <script src="bower_components/jcrop/js/jquery.Jcrop.js"></script>
 
-    <!-- build:js scripts/superdesk-docs-core.js -->
-    <script src="scripts/superdesk/services/asset.js"></script>
-    <script src="docs/module.js"></script>
-    <!-- endbuild -->
+        <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+        <script src="bower_components/angular-resource/angular-resource.js"></script>
+        <script src="bower_components/angular-route/angular-route.js"></script>
+        <script src="bower_components/angular-gettext/dist/angular-gettext.js"></script>
+        <script src="bower_components/angular-mocks/angular-mocks.js"></script>
+        <script src="bower_components/angular-animate/angular-animate.js"></script>
+        <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
+        <script src="bower_components/ng-file-upload/ng-file-upload-shim.js"></script>
+        <script src="bower_components/raven-js/dist/raven.js"></script>
 
-    <!-- build:js scripts/superdesk-docs-main.js -->
-    <!-- endbuild -->
-    <script src="scripts/superdesk-docs-main.js"></script>
-    <script src="scripts/config.js"></script>
+        <script src="bower_components/angular-embed/dist/angular-embed.js"></script>
+        <script src="bower_components/angular-contenteditable/angular-contenteditable.js"></script>
+        <script src="bower_components/angular-vs-repeat/src/angular-vs-repeat.js"></script>
+        <script src="bower_components/exif-js/exif.js"></script>
+        <!-- endbuild -->
 
-    <script>
+        <!-- build:js superdesk-docs-core.js -->
+        <script src="node_modules/superdesk-core/scripts/superdesk/auth/auth.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/auth/auth-service.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/auth/session-service.js"></script>
 
-        // loaded already
-        define('jquery', [], function() {
-            'use strict';
-            return window.jQuery;
-        });
+        <script src="node_modules/superdesk-core/scripts/superdesk/datetime/datetime.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/datetime/group-dates-directive.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/datetime/reldate-directive.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/datetime/reldate-directive-complex.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/datetime/absdate-directive.js"></script>
 
-        // loaded already
-        define('angular', [], function() {
-            'use strict';
-            return window.angular;
-        });
+        <script src="node_modules/superdesk-core/scripts/superdesk/services/translate.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/services/modalService.js"></script>
 
-        var modules = [
-            'superdesk.docs.core',
-            'superdesk.docs'
-        ];
+        <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdAutofocus.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdCheck.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdConfirm.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdDebounceThrottle.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdDragDrop.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdPermissions.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdSearch.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdSearchList.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdSelect.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdSlider.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdSort.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdTypeahead.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdUserAvatar.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdWithParams.js"></script>
 
-        require([
-            'superdesk/superdesk-docs'
-        ], function() {
+        <script src="node_modules/superdesk-core/scripts/superdesk/ui/ui.js"></script>
+        <script src="node_modules/superdesk-core/scripts/superdesk/ui/autoheight-directive.js"></script>
 
+        <script src="node_modules/superdesk-core/scripts/superdesk/services/asset.js"></script>
+        <script src="docs/module.js"></script>
+        <!-- endbuild -->
+
+        <script src="//google-code-prettify.googlecode.com/svn/trunk/src/prettify.js"></script>
+
+        <script src="node_modules/superdesk-core/scripts/superdesk/superdesk-docs.js"></script>
+
+        <script>
+
+            var modules = [
+                'superdesk.docs.core',
+                'superdesk.docs'
+            ];
             var body = angular.element('body');
-            body.ready(function() {
+            body.ready(function () {
                 angular.bootstrap(body, modules);
             });
 
-        });
-    </script>
+        </script>
 
-  </body>
+    </body>
 </html>
