SDNTB-135 get the latest translations
Conflicts:
	client/package.json

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -35,6 +35,7 @@
     <script src="bower_components/classnames/index.js"></script>
 
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-i18n/angular-locale_nb.js"></script>
     <script src="bower_components/gridster/dist/jquery.gridster.with-extras.js"></script>
     <script src="bower_components/medium-editor/dist/js/medium-editor.js"></script>
     <script src="bower_components/medium-editor-tables/dist/js/medium-editor-tables.js"></script>
