chore(core): Update superdesk dependincies

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -170,6 +170,7 @@
     <!-- build:js superdesk-apps.js -->
     <script src="node_modules/superdesk-core/scripts/superdesk-desks/desks.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk-authoring/authoring.js"></script>
+    <script src="node_modules/superdesk-core/scripts/superdesk-authoring/services.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk-authoring/widgets/widgets.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk-authoring/comments/comments.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk-authoring/versioning/versioning.js"></script>
