--- a/client/app/index.html
+++ b/client/app/index.html
@@ -251,7 +251,7 @@
         //date formats for publish/embargo entry
         config.view = {
             dateformat: 'D/M/YYYY',
-            timeformat: 'H:mm'
+            timeformat: 'HH:mm'
         }
 
         var modules = [
