--- a/client/app/index.html
+++ b/client/app/index.html
@@ -252,7 +252,11 @@
         config.view = {
             dateformat: 'D/M/YYYY',
             timeformat: 'H:mm'
-        }
+        };
+
+        config.shortTimeFormat = 'HH:mm';
+        config.shortWeekFormat = 'dddd, HH:mm';
+        config.shortDateFormat = 'DD/MM';
 
         var modules = [
             'superdesk',
