SDNTB-156 Added Norwegian localization for momentjs time/date tool

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -43,6 +43,7 @@
     <script src="bower_components/rangy/rangy-core.js"></script>
     <script src="bower_components/rangy/rangy-selectionsaverestore.js"></script>
     <script src="bower_components/momentjs/moment.js"></script>
+    <script src="bower_components/momentjs/locale/nb.js"></script>
     <script src="bower_components/moment-timezone/builds/moment-timezone-with-data-2010-2020.js"></script>
     <script src="bower_components/langmap/language-mapping-list.js"></script>
     <script src="bower_components/angular-moment/angular-moment.js"></script>
