feat(macros): Integrate a custom ntb macro.
The example ntb macro is not final yet, the integration is done

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -260,6 +260,13 @@
                 'scheduled': true
         };
 
+       // enable ingest/content view in workspace sidebar
+       config.workspace = {
+            ingest: 0,
+            content: 0
+        };
+
+
         var modules = [
             'superdesk',
             'superdesk.settings',
