set config for italic abstract

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -257,6 +257,10 @@
         config.shortTimeFormat = 'HH:mm';
         config.shortWeekFormat = 'dddd, HH:mm';
         config.shortDateFormat = 'DD/MM';
+        
+        config.ui = {
+            italicAbstract: false
+        };
 
         var modules = [
             'superdesk',
