--- a/client/app/index.html
+++ b/client/app/index.html
@@ -276,6 +276,19 @@
             {id: 'category', name:'Category', field: 'subject', list: 'category'}
         ];
 
+        config.list = {
+            priority: ['urgency'],
+            firstLine: [
+                'slugline',
+                'headline',
+                'provider',
+                'update',
+                'updated',
+                'state',
+                'versioncreated'
+            ]
+        };
+
         var modules = [
             'superdesk',
             'superdesk.settings',
