add highlights star to monitoring

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -280,6 +280,7 @@
             priority: ['urgency'],
             firstLine: [
                 'slugline',
+                'highlights',
                 'headline',
                 'provider',
                 'update',
