feat(profile): Enable the change profile for content items for ntb implementation

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -290,6 +290,11 @@
             ]
         };
 
+        config.item_profile = {
+        		change_profile: 1
+        };
+
+
         var modules = [
             'superdesk',
             'superdesk.settings',
