feat(date): Localize the date format for NTB

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -246,6 +246,17 @@
             'indent-article': 1
         };
 
+        config.defaultTimezone = 'Europe/Oslo';
+        config.shortTimeFormat = 'MM.DD.YYYY, HH:mm';
+        config.shortDateFormat = 'MM.DD.YYYY, HH:mm';
+        config.shortWeekFormat = 'MM.DD.YYYY, HH:mm';
+        config.startingDay = '1';
+
+        config.view = {
+            timeformat: 'HH:mm',
+            dateformat: 'MM.DD.YYYY'
+        };
+
         config.features = {
             preview: 1,
             alchemy: 1,
