fix(client): add missing module to index

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -127,6 +127,7 @@
     <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdTypeahead.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdUserAvatar.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdWithParams.js"></script>
+    <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdPasswordStrength.js"></script>
 
     <script src="node_modules/superdesk-core/scripts/superdesk/features/features.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk/services/asset.js"></script>
