--- a/client/app/index.html
+++ b/client/app/index.html
@@ -124,6 +124,7 @@
     <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdTypeahead.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdUserAvatar.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdWithParams.js"></script>
+    <script src="node_modules/superdesk-core/scripts/superdesk/directives/sdPasswordStrength.js"></script>
 
     <script src="node_modules/superdesk-core/scripts/superdesk/features/features.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk/services/asset.js"></script>
@@ -259,7 +260,7 @@
         config.shortTimeFormat = 'HH:mm';
         config.shortWeekFormat = 'dddd, HH:mm';
         config.shortDateFormat = 'DD/MM';
-        
+
         config.ui = {
             italicAbstract: false
         };
