--- a/client/app/index.html
+++ b/client/app/index.html
@@ -54,6 +54,7 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-gettext/dist/angular-gettext.js"></script>
+    <script src="bower_components/angular-mocks/angular-mocks.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
     <script src="bower_components/ng-file-upload/ng-file-upload-shim.js"></script>
@@ -164,6 +165,7 @@
     <script src="node_modules/superdesk-core/scripts/superdesk-users/activity/activity.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk-users/import/import.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk-groups/groups.js"></script>
+    <script src="node_modules/superdesk-core/scripts/superdesk-products/products.js"></script>
 
     <script src="node_modules/superdesk-core/scripts/superdesk-publish/publish.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk-templates/templates.js"></script>
@@ -332,6 +334,7 @@
             'superdesk.ingest',
             'superdesk.desks',
             'superdesk.groups',
+            'superdesk.products',
             'superdesk.authoring',
             'superdesk.authoring.multiedit',
             'superdesk.packaging',
