fix(date): Fix the date format for NTB

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -250,14 +250,14 @@
         };
 
         config.defaultTimezone = 'Europe/Oslo';
-        config.shortTimeFormat = 'MM.DD.YYYY, HH:mm';
-        config.shortDateFormat = 'MM.DD.YYYY, HH:mm';
-        config.shortWeekFormat = 'MM.DD.YYYY, HH:mm';
+        config.shortTimeFormat = 'DD.MM.YYYY, HH:mm';
+        config.shortDateFormat = 'DD.MM.YYYY, HH:mm';
+        config.shortWeekFormat = 'DD.MM.YYYY, HH:mm';
         config.startingDay = '1';
 
         config.view = {
             timeformat: 'HH:mm',
-            dateformat: 'MM.DD.YYYY'
+            dateformat: 'DD.MM.YYYY'
         };
 
         config.features = {
