chore(profiling): Activate profiling on ntb instance

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -169,6 +169,8 @@
 
     <script src="node_modules/superdesk-core/scripts/superdesk-publish/publish.js"></script>
     <script src="node_modules/superdesk-core/scripts/superdesk-templates/templates.js"></script>
+
+    <script src="node_modules/superdesk-core/scripts/superdesk-profiling/profiling.js"></script>
     <!-- endbuild -->
 
     <!-- build:js superdesk-apps.js -->
@@ -354,6 +356,8 @@
             'superdesk.publish',
             'superdesk.templates',
             'superdesk.monitoring',
+
+            'superdesk.profiling',
 
             'superdesk.loading',
             'superdesk.templates-cache'
