feat(publish): For NTB disable 'embargo' and 'send and continue' options on advanced publish

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -283,6 +283,8 @@
         };
 
         config.ui = {
+            publishEmbargo: false,
+            publishSendAdnContinue: false,
             italicAbstract: false
         };
 
