fix(authoring): fix resizable authoring
it was missing css for resize handle

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -16,6 +16,7 @@
     <!-- build:css vendor.css -->
     <link rel="stylesheet" href="bower_components/jcrop/css/jquery.Jcrop.css">
     <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/slider.css">
+    <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/resizable.css">
     <link rel="stylesheet" href="bower_components/medium-editor-tables/dist/css/medium-editor-tables.css">
     <!-- endbuild -->
 
