fix(date): Change the date format for NTB (SDNTB-225)

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -253,9 +253,9 @@
         };
 
         config.defaultTimezone = 'Europe/Oslo';
-        config.shortTimeFormat = 'DD.MM.YYYY, HH:mm';
-        config.shortDateFormat = 'DD.MM.YYYY, HH:mm';
-        config.shortWeekFormat = 'DD.MM.YYYY, HH:mm';
+        config.shortTimeFormat = 'HH:mm, DD.MM.YYYY';
+        config.shortDateFormat = 'HH:mm, DD.MM.YYYY';
+        config.shortWeekFormat = 'HH:mm, DD.MM.YYYY';
         config.startingDay = '1';
 
         config.view = {
