feat(list): Show take key on monitoring list for ntb

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -315,7 +315,7 @@
             priority: ['urgency'],
             firstLine: [
                 'slugline',
-                'takekey,'
+                'takekey',
                 'highlights',
                 'headline',
                 'provider',
