feat(list): Show take key on monitoring list for ntb

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -316,6 +316,7 @@
                 'slugline',
                 'highlights',
                 'headline',
+                'takekey',
                 'provider',
                 'update',
                 'updated',
