feat(list): Show take key on monitoring list for ntb

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -315,10 +315,11 @@
             priority: ['urgency'],
             firstLine: [
                 'slugline',
-                'update',
+                'takekey,'
                 'highlights',
                 'headline',
                 'provider',
+                'update',
                 'updated',
                 'state',
                 'versioncreated'
