feat(editor): Add option to enable/disable editing of scanpix images for NTB

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -266,7 +266,8 @@
         config.features = {
             preview: 1,
             alchemy: 1,
-            customAuthoringTopbar: 1
+            customAuthoringTopbar: 1,
+            editFeaturedImage: 0
         };
 
         config.user = {
